[gd_scene load_steps=8 format=3 uid="uid://bj0n1pg5bfql5"]

[ext_resource type="Script" uid="uid://c7g0ya46yr45f" path="res://scripts/Gameplay/MainSceneController.gd" id="1_ibiss"]
[ext_resource type="Texture2D" uid="uid://dl11rr6enijul" path="res://assets/sprites/texture2D/Back.2048x2048.png" id="2_611at"]
[ext_resource type="Script" uid="uid://b21m4w7rihn8b" path="res://scripts/Gameplay/CenterModel.gd" id="2_ibiss"]
[ext_resource type="Script" uid="uid://7c3ytuvvmgy4" path="res://scripts/Gameplay/MoveSideObject.gd" id="3_c6dvc"]
[ext_resource type="Texture2D" uid="uid://bryi5e5121se7" path="res://assets/sprites/icons/ExitButtonIcons.png" id="3_k24pf"]
[ext_resource type="AnimationLibrary" uid="uid://c0as0onbyox7f" path="res://assets/animations/EasyRotationAnimation.res" id="4_anim"]
[ext_resource type="Script" uid="uid://c26enp1pscogu" path="res://scripts/Gameplay/DetailConnectorController.gd" id="5_ctrl"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_ibiss")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1266, 585)
scale = Vector2(1.5, 1)
texture = ExtResource("2_611at")

[node name="ExitToMenuButton" type="TextureButton" parent="."]
offset_left = 24.0
offset_top = 24.0
offset_right = 108.0
offset_bottom = 108.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("3_k24pf")

[node name="LeftElementPart" type="Node2D" parent="."]
position = Vector2(375, 585)
script = ExtResource("3_c6dvc")

[node name="SubViewportContainer" type="SubViewportContainer" parent="LeftElementPart"]
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0

[node name="SubViewport" type="SubViewport" parent="LeftElementPart/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="LeftElementPart/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 5, 1.2, 0)

[node name="LeftElement" type="Node3D" parent="LeftElementPart/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
script = ExtResource("5_ctrl")

[node name="EasyRotationAnimation" type="AnimationPlayer" parent="LeftElementPart/SubViewportContainer/SubViewport/LeftElement"]
libraries = {
&"EasyRotationAnimation": ExtResource("4_anim")
}

[node name="Camera3D" type="Camera3D" parent="LeftElementPart/SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 5, 1.2, 0)

[node name="CentralElementPart" type="Node2D" parent="."]
position = Vector2(1266, 585)
script = ExtResource("2_ibiss")

[node name="SubViewportContainer" type="SubViewportContainer" parent="CentralElementPart"]
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0

[node name="SubViewport" type="SubViewport" parent="CentralElementPart/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CentralElementPart/SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1.1)

[node name="CentralElement" type="Node3D" parent="CentralElementPart/SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="CentralElementPart/SubViewportContainer/SubViewport/CentralElement"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -1.1)

[node name="RightElementPart" type="Node2D" parent="."]
position = Vector2(2157, 585)
script = ExtResource("3_c6dvc")

[node name="SubViewportContainer" type="SubViewportContainer" parent="RightElementPart"]
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0

[node name="SubViewport" type="SubViewport" parent="RightElementPart/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="RightElement" type="Node3D" parent="RightElementPart/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)
script = ExtResource("5_ctrl")

[node name="EasyRotationAnimation" type="AnimationPlayer" parent="RightElementPart/SubViewportContainer/SubViewport/RightElement"]
libraries = {
&"EasyRotationAnimation": ExtResource("4_anim")
}

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="RightElementPart/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -5, 1.2, 0)

[node name="Camera3D" type="Camera3D" parent="RightElementPart/SubViewportContainer/SubViewport"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, -5, 1.2, 0)

[connection signal="pressed" from="ExitToMenuButton" to="." method="_on_exit_to_menu_button_pressed"]
